// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared/Layout/Navbar Primary 1`] = `
<nav
  className="css-g83dh1-Navbar"
>
  <div
    className="css-1cgxkp9-Navbar"
  >
    <a
      className="css-16xyxo9-Navbar"
      href="#"
    >
      <div>
        <img
          alt="Forest Restoration logo"
          src="test-file-stub"
          style={
            Object {
              "height": "40px",
              "width": "40px",
            }
          }
        />
      </div>
    </a>
  </div>
  <div
    className="css-1y7oko8-Navbar"
  >
    <ul
      className="css-1c3fyq1-Navbar"
    >
      <a
        href="#"
      >
        <span
          className="css-1g7mioc-primaryNav"
        >
          Features
        </span>
      </a>
      <a
        href="#"
      >
        <span
          className="css-1g7mioc-primaryNav"
        >
          Pricing
        </span>
      </a>
    </ul>
  </div>
  <div
    className="css-zhi38n-Navbar"
  >
    <button>
      Login
    </button>
    <button>
      register
    </button>
    <div
      className="css-17d5uml-Popover"
    >
      <button
        aria-expanded={false}
        aria-label="User actions"
        className="css-payarv-Popover"
        id="headlessui-popover-button-5"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <div
          className="css-iiocmr-containerButton"
        >
          <div
            className="css-ltdw9-containerButton"
          >
            <span
              className="css-18uhbbh-Typography-containerButton e1eqcpp10"
              fontSize="xlarge"
            >
              tu
            </span>
          </div>
        </div>
      </button>
    </div>
  </div>
</nav>
`;

exports[`Storyshots Shared/Layout/UserActionsPopover Primary 1`] = `
<div
  className="css-17d5uml-Popover"
>
  <button
    aria-expanded={false}
    className="css-payarv-Popover"
    id="headlessui-popover-button-16"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
  >
    <div
      className="css-iiocmr-containerButton"
    >
      <div
        className="css-ltdw9-containerButton"
      >
        <span
          className="css-18uhbbh-Typography-containerButton e1eqcpp10"
          fontSize="xlarge"
        >
          Tu
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Accordion Custom Component 1`] = `
<button
  aria-expanded={false}
  className="css-110j6x5-Accordion"
  id="headlessui-disclosure-button-3"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  type="button"
>
  <h2
    className="css-1jsx9vf-Typography-Accordion e1eqcpp10"
  >
    Do you know forest restoration app?
  </h2>
  <svg
    className="css-1gkrt1w-Accordion"
    fill="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`Storyshots Shared/UI/Accordion Primary 1`] = `
<button
  aria-expanded={false}
  className="css-110j6x5-Accordion"
  id="headlessui-disclosure-button-undefined"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  type="button"
>
  <h2
    className="css-1jsx9vf-Typography-Accordion e1eqcpp10"
  >
    Do you know forest restoration app?
  </h2>
  <svg
    className="css-1gkrt1w-Accordion"
    fill="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`Storyshots Shared/UI/Button Animated 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  color="primary"
  style={Object {}}
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Contained 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Disabled 1`] = `
<button
  className="css-1s79sza-Button e1p27jrl0"
  color="primary"
  disabled={true}
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Full Width 1`] = `
<button
  className="css-dxwxn1-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Large 1`] = `
<button
  className="css-1lbbych-Button e1p27jrl0"
  color="primary"
  size="large"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Link 1`] = `
<a
  className="css-obkwj4-Button e1p27jrl0"
  color="primary"
>
  My Button
</a>
`;

exports[`Storyshots Shared/UI/Button Medium 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  color="primary"
  size="medium"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Outlined 1`] = `
<button
  className="css-3sqjk8-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Primary 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Secondary 1`] = `
<button
  className="css-1dqrxw7-Button e1p27jrl0"
  color="secondary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Small 1`] = `
<button
  className="css-1182wfu-Button e1p27jrl0"
  color="primary"
  size="small"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Text 1`] = `
<button
  className="css-obkwj4-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Card/AccordionCard Primary 1`] = `
<div
  className="css-1uetd6q-Component"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  role="button"
>
  <div
    className="css-o2nqf8-BaseCard"
  >
    <div
      aria-expanded={false}
      id="headlessui-disclosure-button-19"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <button
        className="css-7n3exe-AccordionCard"
        onClick={[Function]}
      >
        <div
          className="css-xuxdb9-AccordionCard"
        >
          <span
            className="css-1f0uj5-Typography-AccordionCard e1eqcpp10"
          >
            This is a title
          </span>
        </div>
        <svg
          className="css-1ja5sny-AccordionCard"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 15l7-7 7 7"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Animated 1`] = `
<div
  style={Object {}}
>
  <div
    className="css-1u9cowz-Component"
    role="presentation"
  >
    <div
      className="css-o2nqf8-BaseCard"
    >
      <div>
        Hello here
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard No Rounded 1`] = `
<div
  className="css-1v0ldt9-Component"
  role="presentation"
>
  <div
    className="css-o2nqf8-BaseCard"
  >
    <div>
      Hello here
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Not Centered 1`] = `
<div
  className="css-itzumy-Component"
  role="presentation"
>
  <div
    className="css-o2nqf8-BaseCard"
  >
    <div>
      Hello here
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Primary 1`] = `
<div
  className="css-1uetd6q-Component"
  role="presentation"
>
  <div
    className="css-o2nqf8-BaseCard"
  >
    <div>
      Hello here
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Secondary 1`] = `
<div
  className="css-1a0dlgg-Component"
  role="presentation"
>
  <div
    className="css-o2nqf8-BaseCard"
  >
    <div>
      Hello here
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Without Shadow 1`] = `
<div
  className="css-13zjomu-Component"
  role="presentation"
>
  <div
    className="css-o2nqf8-BaseCard"
  >
    <div>
      Hello here
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/TitledCard Primary 1`] = `
<div
  className="css-1uetd6q-Component"
  role="presentation"
>
  <div
    className="css-o2nqf8-BaseCard"
  >
    <div
      className="css-12qcvlk-TitledCard"
    >
      <h2
        className="css-ml6bk9-Typography-TitledCard e1eqcpp10"
      >
        Card
      </h2>
    </div>
    <div
      className="css-5jm8g8-TitledCard"
    >
      <div>
        Hello here
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Autocomplete Multiple 1`] = `
Array [
  <label
    className="css-761v2k-Typography-MultipleAutocomplete e1eqcpp10"
    htmlFor="downshift-12-input"
    id="downshift-12-label"
  >
    Label
     
  </label>,
  <div>
    <div
      className="css-17svbyk-MultipleAutocomplete"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <span
        className="css-1mg2bwh-Pill"
      >
        <span
          className="css-15hugxf-Typography-Pill e1eqcpp10"
        >
          John
        </span>
        <div
          className="css-jsf5f3-Pill"
        >
          <button
            aria-label="Close"
            className="css-1c1w2bs-CloseButton"
            onClick={[Function]}
          >
            <svg
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
              width={14}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
              />
            </svg>
          </button>
        </div>
      </span>
    </div>
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-owns="downshift-12-menu"
      className="css-eliqfu-MultipleAutocomplete"
      role="combobox"
    >
      <div
        className="css-7x8pwu-Input"
      >
        <div
          className="css-15z0cux-Input"
        >
          <label
            className="css-1xqlkzj-Typography-Input e1eqcpp10"
            htmlFor="downshift-12-input"
          />
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="downshift-12-menu"
          aria-labelledby="downshift-12-label"
          autoComplete="off"
          className="css-171eu1g-Component"
          id="downshift-12-input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>,
  <ul
    aria-labelledby="downshift-12-label"
    className="css-9tljps-MultipleAutocomplete"
    id="downshift-12-menu"
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "display": "none",
      }
    }
  />,
]
`;

exports[`Storyshots Shared/UI/Form/Autocomplete Primary 1`] = `
Array [
  <label
    className="css-ib3m-Typography-Autocomplete e1eqcpp10"
    htmlFor="downshift-0-input"
    id="downshift-0-label"
  >
    Label
     
  </label>,
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-0-menu"
    className="css-7cybzn-Autocomplete"
    role="combobox"
  >
    <div
      className="css-7x8pwu-Input"
    >
      <div
        className="css-15z0cux-Input"
      >
        <label
          className="css-1xqlkzj-Typography-Input e1eqcpp10"
          htmlFor="downshift-0-input"
        />
      </div>
      <input
        aria-autocomplete="list"
        aria-controls="downshift-0-menu"
        aria-labelledby="downshift-0-label"
        autoComplete="off"
        className="css-171eu1g-Component"
        id="downshift-0-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>,
  <ul
    aria-labelledby="downshift-0-label"
    className="css-m8nvmy-Autocomplete"
    id="downshift-0-menu"
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "display": "none",
      }
    }
  />,
]
`;

exports[`Storyshots Shared/UI/Form/Autocomplete With Error 1`] = `
Array [
  <label
    className="css-ymbm49-Typography-Autocomplete e1eqcpp10"
    htmlFor="downshift-3-input"
    id="downshift-3-label"
  >
    Label
     
  </label>,
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-3-menu"
    className="css-7cybzn-Autocomplete"
    role="combobox"
  >
    <div
      className="css-7x8pwu-Input"
    >
      <div
        className="css-15z0cux-Input"
      >
        <label
          className="css-1xqlkzj-Typography-Input e1eqcpp10"
          htmlFor="downshift-3-input"
        />
      </div>
      <input
        aria-autocomplete="list"
        aria-controls="downshift-3-menu"
        aria-labelledby="downshift-3-label"
        autoComplete="off"
        className="css-dg1c2h-Component"
        id="downshift-3-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
      <div
        className="css-safnee-Error"
      >
        <span
          className="css-8m3az-Typography-Error e1eqcpp10"
          fontSize="small"
        >
          This is an error
        </span>
      </div>
    </div>
  </div>,
  <ul
    aria-labelledby="downshift-3-label"
    className="css-m8nvmy-Autocomplete"
    id="downshift-3-menu"
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "display": "none",
      }
    }
  />,
]
`;

exports[`Storyshots Shared/UI/Form/Autocomplete With Hint 1`] = `
Array [
  <label
    className="css-ib3m-Typography-Autocomplete e1eqcpp10"
    htmlFor="downshift-6-input"
    id="downshift-6-label"
  >
    Label
     
  </label>,
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-6-menu"
    className="css-7cybzn-Autocomplete"
    role="combobox"
  >
    <div
      className="css-7x8pwu-Input"
    >
      <div
        className="css-15z0cux-Input"
      >
        <label
          className="css-1xqlkzj-Typography-Input e1eqcpp10"
          htmlFor="downshift-6-input"
        />
      </div>
      <input
        aria-autocomplete="list"
        aria-controls="downshift-6-menu"
        aria-labelledby="downshift-6-label"
        autoComplete="off"
        className="css-171eu1g-Component"
        id="downshift-6-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
      <div
        className="css-1y0sv9c-Hint"
      >
        <span
          className="css-qyogae-Typography-Hint e1eqcpp10"
          fontSize="small"
        >
          This is a hint
        </span>
      </div>
    </div>
  </div>,
  <ul
    aria-labelledby="downshift-6-label"
    className="css-m8nvmy-Autocomplete"
    id="downshift-6-menu"
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "display": "none",
      }
    }
  />,
]
`;

exports[`Storyshots Shared/UI/Form/Autocomplete With Reset Option 1`] = `
Array [
  <label
    className="css-ib3m-Typography-Autocomplete e1eqcpp10"
    htmlFor="downshift-9-input"
    id="downshift-9-label"
  >
    Label
     
  </label>,
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-owns="downshift-9-menu"
    className="css-7cybzn-Autocomplete"
    role="combobox"
  >
    <div
      className="css-7x8pwu-Input"
    >
      <div
        className="css-15z0cux-Input"
      >
        <label
          className="css-1xqlkzj-Typography-Input e1eqcpp10"
          htmlFor="downshift-9-input"
        />
      </div>
      <input
        aria-autocomplete="list"
        aria-controls="downshift-9-menu"
        aria-labelledby="downshift-9-label"
        autoComplete="off"
        className="css-171eu1g-Component"
        id="downshift-9-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>,
  <ul
    aria-labelledby="downshift-9-label"
    className="css-m8nvmy-Autocomplete"
    id="downshift-9-menu"
    onMouseLeave={[Function]}
    role="listbox"
    style={
      Object {
        "display": "none",
      }
    }
  />,
]
`;

exports[`Storyshots Shared/UI/Form/Checkbox Bottom 1`] = `
<div
  className="css-v4lhe6-Checkbox"
>
  <div
    className="css-17w6mc7-Checkbox"
  >
    <input
      className="css-1wnnt0h-Checkbox"
      id="checkbox-633"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="css-1ydfun1-Typography-Label e1eqcpp10"
      htmlFor="checkbox-633"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Checkbox Disabled 1`] = `
<div
  className="css-v4lhe6-Checkbox"
>
  <div
    className="css-cm0rpc-Checkbox"
  >
    <label
      className="css-j9m7kx-Typography-Label e1eqcpp10"
      htmlFor="checkbox-767"
    >
      Checkbox
    </label>
    <input
      className="css-54142n-Checkbox"
      disabled={true}
      id="checkbox-767"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Checkbox Hidden 1`] = `
<div
  className="css-v4lhe6-Checkbox"
>
  <div
    className="css-1ilhwpv-Checkbox"
  >
    <label
      className="css-1m8gp89-Typography-Label e1eqcpp10"
      htmlFor="checkbox-651"
    >
      Checkbox
    </label>
    <input
      className="css-1wnnt0h-Checkbox"
      id="checkbox-651"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Checkbox Primary 1`] = `
<div
  className="css-v4lhe6-Checkbox"
>
  <div
    className="css-cm0rpc-Checkbox"
  >
    <label
      className="css-1ydfun1-Typography-Label e1eqcpp10"
      htmlFor="checkbox-930"
    >
      Checkbox
    </label>
    <input
      className="css-1wnnt0h-Checkbox"
      id="checkbox-930"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Checkbox Right 1`] = `
<div
  className="css-v4lhe6-Checkbox"
>
  <div
    className="css-cm0rpc-Checkbox"
  >
    <input
      className="css-1wnnt0h-Checkbox"
      id="checkbox-576"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="css-1ydfun1-Typography-Label e1eqcpp10"
      htmlFor="checkbox-576"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Checkbox Top 1`] = `
<div
  className="css-v4lhe6-Checkbox"
>
  <div
    className="css-17w6mc7-Checkbox"
  >
    <label
      className="css-1ydfun1-Typography-Label e1eqcpp10"
      htmlFor="checkbox-808"
    >
      Checkbox
    </label>
    <input
      className="css-1wnnt0h-Checkbox"
      id="checkbox-808"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Checkbox With Error 1`] = `
<div
  className="css-v4lhe6-Checkbox"
>
  <div
    className="css-cm0rpc-Checkbox"
  >
    <label
      className="css-yuc21c-Typography-Label e1eqcpp10"
      htmlFor="checkbox-623"
    >
      Checkbox
    </label>
    <input
      className="css-1wnnt0h-Checkbox"
      id="checkbox-623"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <div
    className="css-safnee-Error"
  >
    <span
      className="css-8m3az-Typography-Error e1eqcpp10"
      fontSize="small"
    >
      This is an error
    </span>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Checkbox With Hint 1`] = `
<div
  className="css-v4lhe6-Checkbox"
>
  <div
    className="css-cm0rpc-Checkbox"
  >
    <label
      className="css-1ydfun1-Typography-Label e1eqcpp10"
      htmlFor="checkbox-881"
    >
      Checkbox
    </label>
    <input
      className="css-1wnnt0h-Checkbox"
      id="checkbox-881"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <div
    className="css-1y0sv9c-Hint"
  >
    <span
      className="css-qyogae-Typography-Hint e1eqcpp10"
      fontSize="small"
    >
      A useful hint here
    </span>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input Date 1`] = `
<div
  className="css-7x8pwu-Input"
>
  <div
    className="css-15z0cux-Input"
  >
    <label
      className="css-1xqlkzj-Typography-Input e1eqcpp10"
      htmlFor="test"
    >
      Label
    </label>
  </div>
  <input
    className="css-171eu1g-Component"
    defaultValue=""
    id="test"
    type="date"
  />
</div>
`;

exports[`Storyshots Shared/UI/Form/Input Password 1`] = `
<div
  className="css-7x8pwu-Input"
>
  <div
    className="css-15z0cux-Input"
  >
    <label
      className="css-1xqlkzj-Typography-Input e1eqcpp10"
      htmlFor="test"
    >
      Label
    </label>
  </div>
  <input
    className="css-171eu1g-Component"
    defaultValue=""
    id="test"
    type="password"
  />
</div>
`;

exports[`Storyshots Shared/UI/Form/Input Primary 1`] = `
<div
  className="css-7x8pwu-Input"
>
  <div
    className="css-15z0cux-Input"
  >
    <label
      className="css-1xqlkzj-Typography-Input e1eqcpp10"
      htmlFor="test"
    >
      Label
    </label>
  </div>
  <input
    className="css-171eu1g-Component"
    defaultValue=""
    id="test"
    type="text"
  />
</div>
`;

exports[`Storyshots Shared/UI/Form/Input Time 1`] = `
<div
  className="css-7x8pwu-Input"
>
  <div
    className="css-15z0cux-Input"
  >
    <label
      className="css-1xqlkzj-Typography-Input e1eqcpp10"
      htmlFor="test"
    >
      Label
    </label>
  </div>
  <input
    className="css-171eu1g-Component"
    defaultValue=""
    id="test"
    type="time"
  />
</div>
`;

exports[`Storyshots Shared/UI/Form/Input With Custom Error 1`] = `
<div
  className="css-7x8pwu-Input"
>
  <div
    className="css-15z0cux-Input"
  >
    <label
      className="css-1xqlkzj-Typography-Input e1eqcpp10"
      htmlFor="test"
    >
      Label
    </label>
  </div>
  <input
    className="css-dg1c2h-Component"
    defaultValue=""
    id="test"
    type="text"
  />
  <div
    className="css-safnee-Error"
  >
    <div>
      A custom error
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input With Custom Hint 1`] = `
<div
  className="css-7x8pwu-Input"
>
  <div
    className="css-15z0cux-Input"
  >
    <label
      className="css-1xqlkzj-Typography-Input e1eqcpp10"
      htmlFor="test"
    >
      Label
    </label>
  </div>
  <input
    className="css-171eu1g-Component"
    defaultValue=""
    id="test"
    type="text"
  />
  <div
    className="css-1y0sv9c-Hint"
  >
    <div>
      A custom hint
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input With Text Error 1`] = `
<div
  className="css-7x8pwu-Input"
>
  <div
    className="css-15z0cux-Input"
  >
    <label
      className="css-1xqlkzj-Typography-Input e1eqcpp10"
      htmlFor="test"
    >
      Label
    </label>
  </div>
  <input
    className="css-dg1c2h-Component"
    defaultValue=""
    id="test"
    type="text"
  />
  <div
    className="css-safnee-Error"
  >
    <span
      className="css-8m3az-Typography-Error e1eqcpp10"
      fontSize="small"
    >
      This is an error
    </span>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input With Text Hint 1`] = `
<div
  className="css-7x8pwu-Input"
>
  <div
    className="css-15z0cux-Input"
  >
    <label
      className="css-1xqlkzj-Typography-Input e1eqcpp10"
      htmlFor="test"
    >
      Label
    </label>
  </div>
  <input
    className="css-171eu1g-Component"
    defaultValue=""
    id="test"
    type="text"
  />
  <div
    className="css-1y0sv9c-Hint"
  >
    <span
      className="css-qyogae-Typography-Hint e1eqcpp10"
      fontSize="small"
    >
      A useful hint to help you out
    </span>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/RadioGroup Primary 1`] = `
<div
  className="css-1wv9hb5-RadioGroup"
>
  <div
    aria-labelledby="headlessui-label-22"
    className="css-1wv9hb5-RadioGroup"
    id="headlessui-radiogroup-21"
    onKeyDown={[Function]}
    role="radiogroup"
  >
    <label
      className="css-8e9vdt-Typography-RadioGroup e1eqcpp10"
      id="headlessui-label-22"
    >
      Label
    </label>
    <div
      className="css-3hfsvn-RadioGroup"
    >
      <div
        aria-checked="false"
        aria-describedby="headlessui-description-25"
        aria-labelledby="headlessui-label-24"
        className="css-9gbycn-RadioGroup"
        id="headlessui-radiogroup-option-23"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        role="radio"
        tabIndex={0}
      >
        <div
          className="css-1unea5e-RadioGroup"
        >
          <div
            className="css-nmgpc0-RadioGroup"
          >
            <input
              checked={false}
              className="css-1c5vi7e-RadioGroup"
              id="s"
              name="name"
              onChange={[Function]}
              type="radio"
            />
          </div>
          <div
            className="css-1wv9hb5-RadioGroup"
          >
            <label
              className="css-gz8s0g-Typography e1eqcpp10"
              fontSize="small"
              fontWeight="bold"
              htmlFor="s"
              id="headlessui-label-24"
            >
              Startup
            </label>
            <span
              className="css-1qfm3fy-Typography e1eqcpp10"
              fontSize="xsmall"
              id="headlessui-description-25"
            >
              <span>
                12GB
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-describedby="headlessui-description-28"
        aria-labelledby="headlessui-label-27"
        className="css-9gbycn-RadioGroup"
        id="headlessui-radiogroup-option-26"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        role="radio"
        tabIndex={-1}
      >
        <div
          className="css-1unea5e-RadioGroup"
        >
          <div
            className="css-nmgpc0-RadioGroup"
          >
            <input
              checked={false}
              className="css-1c5vi7e-RadioGroup"
              id="b"
              name="name"
              onChange={[Function]}
              type="radio"
            />
          </div>
          <div
            className="css-1wv9hb5-RadioGroup"
          >
            <label
              className="css-gz8s0g-Typography e1eqcpp10"
              fontSize="small"
              fontWeight="bold"
              htmlFor="b"
              id="headlessui-label-27"
            >
              Business
            </label>
            <span
              className="css-1qfm3fy-Typography e1eqcpp10"
              fontSize="xsmall"
              id="headlessui-description-28"
            >
              <span>
                16GB
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        aria-checked="false"
        aria-describedby="headlessui-description-31"
        aria-labelledby="headlessui-label-30"
        className="css-9gbycn-RadioGroup"
        id="headlessui-radiogroup-option-29"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        role="radio"
        tabIndex={-1}
      >
        <div
          className="css-1unea5e-RadioGroup"
        >
          <div
            className="css-nmgpc0-RadioGroup"
          >
            <input
              checked={false}
              className="css-1c5vi7e-RadioGroup"
              id="e"
              name="name"
              onChange={[Function]}
              type="radio"
            />
          </div>
          <div
            className="css-1wv9hb5-RadioGroup"
          >
            <label
              className="css-gz8s0g-Typography e1eqcpp10"
              fontSize="small"
              fontWeight="bold"
              htmlFor="e"
              id="headlessui-label-30"
            >
              Enterprise
            </label>
            <span
              className="css-1qfm3fy-Typography e1eqcpp10"
              fontSize="xsmall"
              id="headlessui-description-31"
            >
              <span />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Select Multiple 1`] = `
<div
  className="css-18wnf5u-Select"
>
  <div
    className="css-oarngq-Select"
  >
    <span
      className="css-1o9syg9-Typography-Select e1eqcpp10"
      id="headlessui-listbox-label-34"
      onClick={[Function]}
    >
      Label
    </span>
  </div>
  <span
    className="css-1v701jn-MultipleValueButton"
  >
    <div
      aria-expanded={false}
      aria-haspopup={true}
      className="css-19pvru8-MultipleValueButton"
      disabled={false}
      id="headlessui-listbox-button-35"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <div
        className="css-1r7aiga-MultipleValueButton"
      >
        <span
          className="css-1qd8rbp-Typography-MultipleValueButton e1eqcpp10"
        >
          Please select an option
        </span>
      </div>
      <span
        className="css-191sm6p-Typography-MultipleValueButton e1eqcpp10"
      >
        <svg
          aria-hidden="true"
          className="css-me364i-MultipleValueButton"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 9l4-4 4 4m0 6l-4 4-4-4"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </span>
    </div>
  </span>
</div>
`;

exports[`Storyshots Shared/UI/Form/Select Primary 1`] = `
<div
  className="css-18wnf5u-Select"
>
  <div
    className="css-oarngq-Select"
  >
    <span
      className="css-1o9syg9-Typography-Select e1eqcpp10"
      id="headlessui-listbox-label-32"
      onClick={[Function]}
    >
      Label
    </span>
  </div>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="css-znzzrz-SingleValueButton"
    disabled={false}
    id="headlessui-listbox-button-33"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="css-so58bt-Typography-SingleValueButton e1eqcpp10"
    >
      Select a value
    </span>
    <span
      className="css-1jmaz9s-Typography-SingleValueButton e1eqcpp10"
    >
      <svg
        aria-hidden="true"
        className="css-2job6i-SingleValueButton"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 9l4-4 4 4m0 6l-4 4-4-4"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Select With Error 1`] = `
Array [
  <div
    className="css-18wnf5u-Select"
  >
    <div
      className="css-oarngq-Select"
    >
      <span
        className="css-1p0iy9y-Typography-Select e1eqcpp10"
        id="headlessui-listbox-label-36"
        onClick={[Function]}
      >
        Label
      </span>
    </div>
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="css-120822f-SingleValueButton"
      disabled={false}
      id="headlessui-listbox-button-37"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="css-so58bt-Typography-SingleValueButton e1eqcpp10"
      >
        Select a value
      </span>
      <span
        className="css-1jmaz9s-Typography-SingleValueButton e1eqcpp10"
      >
        <svg
          aria-hidden="true"
          className="css-2job6i-SingleValueButton"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 9l4-4 4 4m0 6l-4 4-4-4"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </span>
    </button>
  </div>,
  <div
    className="css-safnee-Error"
  >
    <span
      className="css-8m3az-Typography-Error e1eqcpp10"
      fontSize="small"
    >
      This is an error
    </span>
  </div>,
]
`;

exports[`Storyshots Shared/UI/Form/Select With Hint 1`] = `
Array [
  <div
    className="css-18wnf5u-Select"
  >
    <div
      className="css-oarngq-Select"
    >
      <span
        className="css-1o9syg9-Typography-Select e1eqcpp10"
        id="headlessui-listbox-label-38"
        onClick={[Function]}
      >
        Label
      </span>
    </div>
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="css-znzzrz-SingleValueButton"
      disabled={false}
      id="headlessui-listbox-button-39"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="css-so58bt-Typography-SingleValueButton e1eqcpp10"
      >
        Select a value
      </span>
      <span
        className="css-1jmaz9s-Typography-SingleValueButton e1eqcpp10"
      >
        <svg
          aria-hidden="true"
          className="css-2job6i-SingleValueButton"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 9l4-4 4 4m0 6l-4 4-4-4"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </span>
    </button>
  </div>,
  <div
    className="css-1y0sv9c-Hint"
  >
    <span
      className="css-qyogae-Typography-Hint e1eqcpp10"
      fontSize="small"
    >
      This is a hint
    </span>
  </div>,
]
`;

exports[`Storyshots Shared/UI/Form/Select With Placeholder 1`] = `
<div
  className="css-18wnf5u-Select"
>
  <div
    className="css-oarngq-Select"
  >
    <span
      className="css-1o9syg9-Typography-Select e1eqcpp10"
      id="headlessui-listbox-label-42"
      onClick={[Function]}
    >
      Label
    </span>
  </div>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="css-znzzrz-SingleValueButton"
    disabled={false}
    id="headlessui-listbox-button-43"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="css-so58bt-Typography-SingleValueButton e1eqcpp10"
    >
      Please select an option wisely
    </span>
    <span
      className="css-1jmaz9s-Typography-SingleValueButton e1eqcpp10"
    >
      <svg
        aria-hidden="true"
        className="css-2job6i-SingleValueButton"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 9l4-4 4 4m0 6l-4 4-4-4"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Select With Reset Option 1`] = `
<div
  className="css-18wnf5u-Select"
>
  <div
    className="css-oarngq-Select"
  >
    <span
      className="css-1o9syg9-Typography-Select e1eqcpp10"
      id="headlessui-listbox-label-40"
      onClick={[Function]}
    >
      Label
    </span>
  </div>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="css-znzzrz-SingleValueButton"
    disabled={false}
    id="headlessui-listbox-button-41"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="css-so58bt-Typography-SingleValueButton e1eqcpp10"
    >
      Select a value
    </span>
    <span
      className="css-1jmaz9s-Typography-SingleValueButton e1eqcpp10"
    >
      <svg
        aria-hidden="true"
        className="css-2job6i-SingleValueButton"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 9l4-4 4 4m0 6l-4 4-4-4"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Bottom 1`] = `
<div
  className="css-1halu6f-Switch"
>
  <button
    aria-checked={false}
    aria-labelledby="headlessui-label-51"
    className="css-fdzfzh-Switch"
    id="headlessui-switch-50"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-8j1u9z-Switch"
    />
  </button>
  <span
    className="css-9sy0ng-Typography-Label e1eqcpp10"
    id="headlessui-label-51"
    onClick={[Function]}
  >
    Switch
  </span>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Disabled 1`] = `
<div
  className="css-gxbv2c-Switch"
>
  <span
    className="css-da4du5-Typography-Label e1eqcpp10"
    id="headlessui-label-54"
    onClick={[Function]}
  >
    Switch
  </span>
  <button
    aria-checked={false}
    aria-labelledby="headlessui-label-54"
    className="css-1jjn4la-Switch"
    id="headlessui-switch-55"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-6zzq3y-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Hidden 1`] = `
<div
  className="css-1dgmue2-Switch"
>
  <button
    aria-checked={false}
    className="css-fdzfzh-Switch"
    id="headlessui-switch-52"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-8j1u9z-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Primary 1`] = `
<div
  className="css-gxbv2c-Switch"
>
  <span
    className="css-9sy0ng-Typography-Label e1eqcpp10"
    id="headlessui-label-44"
    onClick={[Function]}
  >
    Switch
  </span>
  <button
    aria-checked={false}
    aria-labelledby="headlessui-label-44"
    className="css-fdzfzh-Switch"
    id="headlessui-switch-45"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-8j1u9z-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Right 1`] = `
<div
  className="css-gxbv2c-Switch"
>
  <button
    aria-checked={false}
    aria-labelledby="headlessui-label-47"
    className="css-fdzfzh-Switch"
    id="headlessui-switch-46"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-8j1u9z-Switch"
    />
  </button>
  <span
    className="css-9sy0ng-Typography-Label e1eqcpp10"
    id="headlessui-label-47"
    onClick={[Function]}
  >
    Switch
  </span>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Top 1`] = `
<div
  className="css-1halu6f-Switch"
>
  <span
    className="css-9sy0ng-Typography-Label e1eqcpp10"
    id="headlessui-label-48"
    onClick={[Function]}
  >
    Switch
  </span>
  <button
    aria-checked={false}
    aria-labelledby="headlessui-label-48"
    className="css-fdzfzh-Switch"
    id="headlessui-switch-49"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
    type="button"
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-8j1u9z-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch With Double Text 1`] = `
<div
  className="flex flex-row gap-2"
>
  <span
    className="css-ylofhr-Typography e1eqcpp10"
  >
    Left
  </span>
  <div
    className="css-1dgmue2-Switch"
  >
    <button
      aria-checked={false}
      className="css-fdzfzh-Switch"
      id="headlessui-switch-53"
      onClick={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="switch"
      tabIndex={0}
      type="button"
    >
      <label
        className="css-so2e4e-Switch"
      >
        Label
      </label>
      <span
        className="css-8j1u9z-Switch"
      />
    </button>
  </div>
  <span
    className="css-ylofhr-Typography e1eqcpp10"
  >
    Right
  </span>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch With Error 1`] = `
Array [
  <div
    className="css-gxbv2c-Switch"
  >
    <span
      className="css-1pcxcdz-Typography-Label e1eqcpp10"
      id="headlessui-label-58"
      onClick={[Function]}
    >
      Switch
    </span>
    <button
      aria-checked={false}
      aria-labelledby="headlessui-label-58"
      className="css-1qa2gp-Switch"
      id="headlessui-switch-59"
      onClick={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="switch"
      tabIndex={0}
      type="button"
    >
      <label
        className="css-so2e4e-Switch"
      >
        Switch
      </label>
      <span
        className="css-8j1u9z-Switch"
      />
    </button>
  </div>,
  <div
    className="css-safnee-Error"
  >
    <span
      className="css-8m3az-Typography-Error e1eqcpp10"
      fontSize="small"
    >
      This is an error
    </span>
  </div>,
]
`;

exports[`Storyshots Shared/UI/Form/Switch With Hint 1`] = `
Array [
  <div
    className="css-gxbv2c-Switch"
  >
    <span
      className="css-9sy0ng-Typography-Label e1eqcpp10"
      id="headlessui-label-56"
      onClick={[Function]}
    >
      Switch
    </span>
    <button
      aria-checked={false}
      aria-labelledby="headlessui-label-56"
      className="css-fdzfzh-Switch"
      id="headlessui-switch-57"
      onClick={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="switch"
      tabIndex={0}
      type="button"
    >
      <label
        className="css-so2e4e-Switch"
      >
        Switch
      </label>
      <span
        className="css-8j1u9z-Switch"
      />
    </button>
  </div>,
  <div
    className="css-1y0sv9c-Hint"
  >
    <span
      className="css-qyogae-Typography-Hint e1eqcpp10"
      fontSize="small"
    >
      A useful hint here
    </span>
  </div>,
]
`;

exports[`Storyshots Shared/UI/FormStepper Five Steps 1`] = `
<nav
  aria-label="Form Steps"
  className="css-10hzge-FormStepper"
>
  <div
    className="css-zp6gul-FormStepper"
  >
    <button
      aria-label="Step 1"
      className="css-1skdaoj-FormStepper"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-yvnabd-FormStepper"
      >
        <svg
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="css-16t6w8t-FormStepper"
      >
        <span
          className="css-1vzndab-Typography-FormStepper e1eqcpp10"
          fontSize="xsmall"
          fontWeight="400"
        >
          Step 1
        </span>
      </div>
    </button>
    <div
      className="css-3zxj7g-HorizontalLine"
    />
    <button
      aria-label="Step 2"
      className="css-139ysis-FormStepper"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-4y1nyw-FormStepper"
      >
        <svg
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="css-16t6w8t-FormStepper"
      >
        <span
          className="css-16g5foj-Typography-FormStepper e1eqcpp10"
          fontSize="xsmall"
          fontWeight="400"
        >
          Step 2
        </span>
      </div>
    </button>
    <div
      className="css-py5jvo-HorizontalLine"
    />
    <button
      aria-label="Step 3"
      className="css-1l3bcmf-FormStepper"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-1k906gi-FormStepper"
      >
        <svg
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="css-16t6w8t-FormStepper"
      >
        <span
          className="css-4eomot-Typography-FormStepper e1eqcpp10"
          fontSize="xsmall"
          fontWeight="400"
        >
          Step 3
        </span>
      </div>
    </button>
    <div
      className="css-py5jvo-HorizontalLine"
    />
    <button
      aria-label="Step 4"
      className="css-1l3bcmf-FormStepper"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-1k906gi-FormStepper"
      >
        <svg
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="css-16t6w8t-FormStepper"
      >
        <span
          className="css-4eomot-Typography-FormStepper e1eqcpp10"
          fontSize="xsmall"
          fontWeight="400"
        >
          Step 4
        </span>
      </div>
    </button>
    <div
      className="css-py5jvo-HorizontalLine"
    />
    <button
      aria-label="Step 5"
      className="css-1l3bcmf-FormStepper"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-1k906gi-FormStepper"
      >
        <svg
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="css-16t6w8t-FormStepper"
      >
        <span
          className="css-4eomot-Typography-FormStepper e1eqcpp10"
          fontSize="xsmall"
          fontWeight="400"
        >
          Step 5
        </span>
      </div>
    </button>
  </div>
</nav>
`;

exports[`Storyshots Shared/UI/FormStepper Middle Selected 1`] = `
<nav
  aria-label="Form Steps"
  className="css-10hzge-FormStepper"
>
  <div
    className="css-zp6gul-FormStepper"
  >
    <button
      aria-label="Step 1"
      className="css-1skdaoj-FormStepper"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-yvnabd-FormStepper"
      >
        <svg
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="css-16t6w8t-FormStepper"
      >
        <span
          className="css-1vzndab-Typography-FormStepper e1eqcpp10"
          fontSize="xsmall"
          fontWeight="400"
        >
          Step 1
        </span>
      </div>
    </button>
    <div
      className="css-3zxj7g-HorizontalLine"
    />
    <button
      aria-label="Step 2"
      className="css-139ysis-FormStepper"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-4y1nyw-FormStepper"
      >
        <svg
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="css-16t6w8t-FormStepper"
      >
        <span
          className="css-16g5foj-Typography-FormStepper e1eqcpp10"
          fontSize="xsmall"
          fontWeight="400"
        >
          Step 2
        </span>
      </div>
    </button>
    <div
      className="css-py5jvo-HorizontalLine"
    />
    <button
      aria-label="Step 3"
      className="css-1l3bcmf-FormStepper"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-1k906gi-FormStepper"
      >
        <svg
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="css-16t6w8t-FormStepper"
      >
        <span
          className="css-4eomot-Typography-FormStepper e1eqcpp10"
          fontSize="xsmall"
          fontWeight="400"
        >
          Step 3
        </span>
      </div>
    </button>
  </div>
</nav>
`;

exports[`Storyshots Shared/UI/FormStepper Primary 1`] = `
<nav
  aria-label="Form Steps"
  className="css-10hzge-FormStepper"
>
  <div
    className="css-zp6gul-FormStepper"
  >
    <button
      aria-label="Step 1"
      className="css-139ysis-FormStepper"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-4y1nyw-FormStepper"
      >
        <svg
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="css-16t6w8t-FormStepper"
      >
        <span
          className="css-16g5foj-Typography-FormStepper e1eqcpp10"
          fontSize="xsmall"
          fontWeight="400"
        >
          Step 1
        </span>
      </div>
    </button>
    <div
      className="css-py5jvo-HorizontalLine"
    />
    <button
      aria-label="Step 2"
      className="css-1l3bcmf-FormStepper"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-1k906gi-FormStepper"
      >
        <svg
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="css-16t6w8t-FormStepper"
      >
        <span
          className="css-4eomot-Typography-FormStepper e1eqcpp10"
          fontSize="xsmall"
          fontWeight="400"
        >
          Step 2
        </span>
      </div>
    </button>
    <div
      className="css-py5jvo-HorizontalLine"
    />
    <button
      aria-label="Step 3"
      className="css-1l3bcmf-FormStepper"
      disabled={false}
      onClick={[Function]}
    >
      <div
        className="css-1k906gi-FormStepper"
      >
        <svg
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </svg>
      </div>
      <div
        className="css-16t6w8t-FormStepper"
      >
        <span
          className="css-4eomot-Typography-FormStepper e1eqcpp10"
          fontSize="xsmall"
          fontWeight="400"
        >
          Step 3
        </span>
      </div>
    </button>
  </div>
</nav>
`;

exports[`Storyshots Shared/UI/IconButton Contained 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Disabled 1`] = `
<button
  className="css-1s79sza-Button e1p27jrl0"
  disabled={true}
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Full Width 1`] = `
<button
  className="css-dxwxn1-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Large 1`] = `
<button
  className="css-1lbbych-Button e1p27jrl0"
  size="large"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Link 1`] = `
<a
  className="css-obkwj4-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</a>
`;

exports[`Storyshots Shared/UI/IconButton Medium 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  size="medium"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton No Shadow 1`] = `
<button
  className="css-5zh00q-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Outlined 1`] = `
<button
  className="css-3sqjk8-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Primary 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Rounded 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Secondary 1`] = `
<button
  className="css-1dqrxw7-Button e1p27jrl0"
  color="secondary"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Small 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  size="medium"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Text 1`] = `
<button
  className="css-obkwj4-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/Loaders/LinearIndicator Primary 1`] = `
<div
  className="css-zvkbpw-LinearIndicator"
>
  <div
    className="css-1j3bg6v-Component"
  >
    <div
      className="shim css-p8h9f7-LinearIndicator"
    />
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Loaders/LinearIndicator Secondary 1`] = `
<div
  className="css-gctj2l-LinearIndicator"
>
  <div
    className="css-1j3bg6v-Component"
  >
    <div
      className="shim css-p8h9f7-LinearIndicator"
    />
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Loaders/Spinner Primary 1`] = `
<div
  className="css-1dyvqcd-Spinner"
>
  <div
    className="css-7cvwhs-Spinner"
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Custom 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "342px",
        "width": "342px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Large 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Medium 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "192px",
        "width": "192px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Primary 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "192px",
        "width": "192px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Small 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "86px",
        "width": "86px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Modal Custom Footer 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/Modal Full Screen 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/Modal Full Width 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/Modal Primary 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/Modal With Content 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/Pill Custom Children 1`] = `
<span
  className="css-1rlg72h-Pill"
>
  <button
    className="border-2 border-primary"
  >
    I am a button
  </button>
</span>
`;

exports[`Storyshots Shared/UI/Pill Primary 1`] = `
<span
  className="css-1rlg72h-Pill"
>
  <span
    className="css-15hugxf-Typography-Pill e1eqcpp10"
  >
    Hello
  </span>
</span>
`;

exports[`Storyshots Shared/UI/Pill With Close 1`] = `
<span
  className="css-1rlg72h-Pill"
>
  <span
    className="css-15hugxf-Typography-Pill e1eqcpp10"
  >
    Hello
  </span>
  <div
    className="css-jsf5f3-Pill"
  >
    <button
      aria-label="Close"
      className="css-1c1w2bs-CloseButton"
      onClick={[Function]}
    >
      <svg
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        width={14}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 18L18 6M6 6l12 12"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
        />
      </svg>
    </button>
  </div>
</span>
`;

exports[`Storyshots Shared/UI/Pill With Icon 1`] = `
<span
  className="css-1rlg72h-Pill"
>
  <span>
    <span
      className="css-12e79s5-Pill"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={12}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
  </span>
  <span
    className="css-15hugxf-Typography-Pill e1eqcpp10"
  >
    Hello
  </span>
</span>
`;

exports[`Storyshots Shared/UI/Popover Primary 1`] = `
<div
  className="css-udih9e-Template"
>
  <div
    className="css-17d5uml-Popover"
  >
    <button
      aria-expanded={false}
      className="css-d1a0bs-Button-Popover e1p27jrl0"
      id="headlessui-popover-button-8"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <span
        className="css-99plj2-Typography-Popover e1eqcpp10"
      >
        Popover
      </span>
      <svg
        aria-hidden="true"
        className="css-1lkdlt0-Popover"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Popover Top 1`] = `
<div
  className="css-udih9e-Template"
>
  <div
    className="css-17d5uml-Popover"
  >
    <button
      aria-expanded={false}
      className="css-d1a0bs-Button-Popover e1p27jrl0"
      id="headlessui-popover-button-11"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
    >
      <span
        className="css-99plj2-Typography-Popover e1eqcpp10"
      >
        Popover
      </span>
      <svg
        aria-hidden="true"
        className="css-1lkdlt0-Popover"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/SideDrawer Primary 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/SideDrawer Right 1`] = `
<button
  className="css-21me1p-Button e1p27jrl0"
  onClick={[Function]}
>
  open
</button>
`;

exports[`Storyshots Shared/UI/Tabs/TabList Primary 1`] = `
<div
  aria-orientation="horizontal"
  className="css-ezt9no-TabList"
  role="tablist"
>
  <button
    aria-selected={false}
    className="css-1s3inqw-TabList"
    id="headlessui-tabs-tab-60"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1tpu2dd-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      New
    </span>
  </button>
  <button
    aria-selected={false}
    className="css-1s3inqw-TabList"
    id="headlessui-tabs-tab-61"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1tpu2dd-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      Old
    </span>
  </button>
  <button
    aria-selected={false}
    className="css-1s3inqw-TabList"
    id="headlessui-tabs-tab-62"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1tpu2dd-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      Something else
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Tabs/TabList With Icons 1`] = `
<div
  aria-orientation="horizontal"
  className="css-ezt9no-TabList"
  role="tablist"
>
  <button
    aria-selected={false}
    className="css-1s3inqw-TabList"
    id="headlessui-tabs-tab-63"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1qv0jkg-TabList"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
    <span
      className="css-1tpu2dd-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      Notifications
    </span>
  </button>
  <button
    aria-selected={false}
    className="css-1s3inqw-TabList"
    id="headlessui-tabs-tab-64"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1qv0jkg-TabList"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
    <span
      className="css-1tpu2dd-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      Another one
    </span>
  </button>
  <button
    aria-selected={false}
    className="css-1s3inqw-TabList"
    id="headlessui-tabs-tab-65"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1qv0jkg-TabList"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
    <span
      className="css-1tpu2dd-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      More tab
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Tabs/TabList With Only Icons 1`] = `
<div
  aria-orientation="horizontal"
  className="css-ezt9no-TabList"
  role="tablist"
>
  <button
    aria-selected={false}
    className="css-1s3inqw-TabList"
    id="headlessui-tabs-tab-66"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1qv0jkg-TabList"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
    <span
      className="css-1tpu2dd-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      
    </span>
  </button>
  <button
    aria-selected={false}
    className="css-1s3inqw-TabList"
    id="headlessui-tabs-tab-67"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1qv0jkg-TabList"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
    <span
      className="css-1tpu2dd-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      
    </span>
  </button>
  <button
    aria-selected={false}
    className="css-1s3inqw-TabList"
    id="headlessui-tabs-tab-68"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tab"
    tabIndex={-1}
  >
    <span
      className="css-1qv0jkg-TabList"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 2a6 6 0 00-6 6v3.586l-.707.707A1 1 0 004 14h12a1 1 0 00.707-1.707L16 11.586V8a6 6 0 00-6-6zM10 18a3 3 0 01-3-3h6a3 3 0 01-3 3z"
        />
      </svg>
    </span>
    <span
      className="css-1tpu2dd-Typography-TabList e1eqcpp10"
      fontSize="small"
    >
      
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Tabs/TabPanels Primary 1`] = `
Array [
  <div
    aria-orientation="horizontal"
    className="css-ezt9no-TabList"
    role="tablist"
  >
    <button
      aria-selected={false}
      className="css-1s3inqw-TabList"
      id="headlessui-tabs-tab-69"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      <span
        className="css-1tpu2dd-Typography-TabList e1eqcpp10"
        fontSize="small"
      >
        New
      </span>
    </button>
    <button
      aria-selected={false}
      className="css-1s3inqw-TabList"
      id="headlessui-tabs-tab-70"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      <span
        className="css-1tpu2dd-Typography-TabList e1eqcpp10"
        fontSize="small"
      >
        Old
      </span>
    </button>
    <button
      aria-selected={false}
      className="css-1s3inqw-TabList"
      id="headlessui-tabs-tab-71"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      role="tab"
      tabIndex={-1}
    >
      <span
        className="css-1tpu2dd-Typography-TabList e1eqcpp10"
        fontSize="small"
      >
        Something else
      </span>
    </button>
  </div>,
  <div
    className="css-1xcmdsv-TabPanels"
  />,
]
`;

exports[`Storyshots Shared/UI/Toast Custom 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-21me1p-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Custom JSX 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-21me1p-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Error 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-21me1p-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Loading 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-21me1p-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Primary 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-21me1p-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Success 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-21me1p-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Typography Body 1`] = `
<span
  className="css-wvw5bl-Typography e1eqcpp10"
>
  My Body 1
</span>
`;

exports[`Storyshots Shared/UI/Typography Body 2 1`] = `
<span
  className="css-bo08yw-Typography e1eqcpp10"
>
  My Body 2
</span>
`;

exports[`Storyshots Shared/UI/Typography Bold 1`] = `
<span
  className="css-1j4jkai-Typography e1eqcpp10"
  fontWeight="bold"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Heading 1`] = `
<h2
  className="css-8jlqfr-Typography e1eqcpp10"
>
  My Heading
</h2>
`;

exports[`Storyshots Shared/UI/Typography Italic 1`] = `
<span
  className="css-ksx63x-Typography e1eqcpp10"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Light 1`] = `
<span
  className="css-yda13v-Typography e1eqcpp10"
  fontWeight="light"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Noto Serif 1`] = `
<span
  className="css-17a90vs-Typography e1eqcpp10"
  fontFamily="notoSerif"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Primary 1`] = `
<span
  className="css-wvw5bl-Typography e1eqcpp10"
>
  My Typography
</span>
`;

exports[`Storyshots Shared/UI/Typography Primary Color 1`] = `
<span
  className="css-1gseyk1-Typography e1eqcpp10"
  color="primary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Sans 1`] = `
<span
  className="css-ylofhr-Typography e1eqcpp10"
  fontFamily="sans"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Secondary Color 1`] = `
<span
  className="css-9ebupz-Typography e1eqcpp10"
  color="secondary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Text Primary Color 1`] = `
<span
  className="css-ylofhr-Typography e1eqcpp10"
  color="textPrimary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Text Secondary Color 1`] = `
<span
  className="css-1qoo2rk-Typography e1eqcpp10"
  color="textSecondary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Underlined 1`] = `
<span
  className="css-63ijbe-Typography e1eqcpp10"
>
  My Text
</span>
`;
